# ChangeLog for dev-util/deskzilla
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Added ~amd64 keyword

  20 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -deskzilla-1.3_beta2.ebuild, +deskzilla-1.3.ebuild:
  Version bump
