@@ -1,4 +1,5 @@
+AUX deskzilla_gentoo.license 1584 RMD160 35699d15d07c5b8a29e8f06d0233f9b7014abd97 SHA1 089b1815165eb208c8fc2a3733b42781a46f6b65 SHA256 a11b89eedf8211d50ca13177b7d8d1fc59645a5c9faa13761525c24a9ae84a74
 DIST deskzilla-1_3_without_jre.tar.gz 6882713 RMD160 25070a37c7660c9b48a6ada1e108944c268a8298 SHA1 528fd05d61fa502a86402425d63c356d19fcabe3 SHA256 d96905cd50ad943a65b39789cd658c00d51f61404eb8ecc7c700561a4af2e289
-EBUILD deskzilla-1.3.ebuild 2227 RMD160 134af664713dc324a1340fe61648df680aba90f9 SHA1 38c92789e9052b5610b601d1f1774e1fa238ef62 SHA256 22ab7a98dd6ef5f30a46dc707fc725df77e9db1e5ef5cad941fe55ae0109ef3f
-MISC ChangeLog 333 RMD160 5d68fbe361bc2d8e4daa523285447234bd710008 SHA1 f4025c00cb5ea75b5b1cb2c55de514dabe9a8ee5 SHA256 c53791fcda272a8d250eb1265ce09cc19b1b8a41c7b87ef813f7ed3c14d86fc1
+EBUILD deskzilla-1.3.ebuild 2407 RMD160 62e3fc80f6a2563112f06b90a4e28973068c14cb SHA1 a6527e45b71565c68b507136b5555008492e984d SHA256 14d1d90b84a4adf2cb274b38d63fbc25785abb67fe0d61555a00931272bcd694
+MISC ChangeLog 544 RMD160 bac160c1252966401b1fbd4a6ee2c3188d9a416c SHA1 44c1ad9631163d11f41af4ba3a15024bb66d9373 SHA256 d085d94d1b4cecf7b180899a70d9213789ae583b227c183bf199697eb5d61928
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
