@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Apr 2007; Vlastimil Babka <caster@gentoo.org> deskzilla-1.3.ebuild,
+  +files/deskzilla_gentoo.license:
+  Use the new java-pkg_register-dependency() function for dependencies;
+  install the Gentoo license.
+
   22 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
   Added ~amd64 keyword
 
